--- a/src/translations/messages.fa.yaml
+++ b/src/translations/messages.fa.yaml
@@ -37,8 +37,10 @@ global:
   locker: کمد
   create_data_text: برای ایجاد محتوای جدید روی دکمه زیر کلیک کنید
   product_price: قیمت محصول
+  buy: خرید
 locker:
   isempty: وضعیت
 user:
   openlocker: باز کردن کمد
   give_me_locker: یک کمد برایم باز کن
+  locker_number: شماره کمد
